ELK+Filebeat-log-solution/yamls/elasticsearch/elasticsearch-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-es
  labels:
    name: ns-es
